[package]
name = "axc"
version = "0.1.0"
edition = "2021"
description = "AXC — Adaptive eXtensible Compression archive"
license = "Apache-2.0"

[[bin]]
name = "axc"
path = "src/main.rs"

[lib]
name = "axc"
path = "src/lib.rs"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
